# ngx-basic-auth-decode

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
examples/: auth-decode.conf
src/: lib.rs
